Removes outdated code of conduct and license files
Deletes the CODE_OF_CONDUCT.md, LICENSE_APACHE, and LICENSE_MIT files as they are no longer relevant to the project.

Introduces a new package name and updates the package description to better reflect the project's purpose.

Refines the GraphQL request handling by implementing CORS support and improving error messages for better clarity.

Updates the project structure by adding a test file and modifying dependencies to streamline future development.

--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "private": true,
-  "name": "edge-proxy",
+  "name": "ithaa-edge-public-proxy",
   "version": "1.0.0",
-  "description": "A template for kick starting a Cloudflare Workers project",
+  "description": "Ithaa Edge Public Proxy",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.{js,css,json,md}'"
   },
+  "type": "module",
   "author": "Kristian Freeman <kristian@kristianfreeman.com>",
   "license": "MIT",
   "devDependencies": {
+    "@urql/core": "^5.1.1",
     "prettier": "^1.18.2"
   },
   "dependencies": {
-    "graphql": "^15.0.0",
-    "graphql-request": "^1.8.2",
-    "graphql-tag": "^2.10.3"
+    "graphql-request": "^1.8.2"
   }
 }
